--- a/Accountbaseline.yml
+++ b/Accountbaseline.yml
@@ -13,25 +13,23 @@
 # HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 # OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 # SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
+---
 AWSTemplateFormatVersion: 2010-09-09
 Description: Create a S3 upload bucket in the master account.
-
 Parameters:
   OrganizationId:
-    Type: 'String'
+    Type: String
     Description: AWS Organization Id of the Landing Zone.
   SSEAlgorithm:
-    Type: 'String'
-    Default: 'AES256'
+    Type: String
+    Default: AES256
     Description: S3 bucket SSE Algorithm.
     AllowedValues:
-    - 'AES256'
+      - AES256
 Conditions:
   UseAES256: !Equals
-    - !Ref SSEAlgorithm
-    - 'AES256'
-
+    - !Ref 'SSEAlgorithm'
+    - AES256
 Resources:
   # Create buckets using S3-SSE keys for default encryption
   S3SharedBucket:
@@ -40,39 +38,39 @@ Resources:
     Condition: UseAES256
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub aws-landing-zone-upload-${AWS::AccountId}-${AWS::Region}
+      BucketName: !Sub 'aws-landing-zone-upload-${AWS::AccountId}-${AWS::Region}'
       VersioningConfiguration:
         Status: Enabled
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: !Ref SSEAlgorithm
+              SSEAlgorithm: !Ref 'SSEAlgorithm'
   S3UploadBucketPolicy:
     Metadata:
       cfn_nag:
         rules_to_suppress:
           - id: F16
-            reason: "We can allow * for the Principal as we are limiting access to the Org."
+            reason: We can allow * for the Principal as we are limiting access to
+              the Org.
     #It goes at the same level as Type: and Properties:, so directly under your resource.
     Type: AWS::S3::BucketPolicy
     Condition: UseAES256
     Properties:
-      Bucket: !Ref S3SharedBucket
+      Bucket: !Ref 'S3SharedBucket'
       PolicyDocument:
         Version: 2012-10-17
         Statement:
           - Sid: AllowOrganizationRead
             Effect: Allow
-            Principal: "*"
+            Principal: '*'
             Action:
               - s3:GetObject
             Resource:
-              - !Sub "arn:aws:s3:::${S3SharedBucket}/*"
+              - !Sub 'arn:aws:s3:::${S3SharedBucket}/*'
             Condition:
               StringEquals:
-                aws:PrincipalOrgID: !Ref OrganizationId
-
+                aws:PrincipalOrgID: !Ref 'OrganizationId'
 Outputs:
   BucketName:
     Description: AWS Landing Zone Shared bucket name
-    Value: !Ref S3SharedBucket
+    Value: !Ref 'S3SharedBucket'
