--- a/accountbuilder.yml
+++ b/accountbuilder.yml
@@ -7,17 +7,18 @@
 # merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
 # permit persons to whom the Software is furnished to do so.
 #
-# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+# THE SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
 # INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
 # PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 # HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 # OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 # SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
+---
 AWSTemplateFormatVersion: 2010-09-09
-Description: This template accepts parameters for creating a new account in your AWS Organization, with a baseline set of resources (fdp-1pg15bsqb)
+Description: This template accepts parameters for creating a new account in your AWS
+  Organization, with a baseline set of resources (fdp-1pg15bsqb)
 Metadata:
-  'AWS::CloudFormation::Interface':
+  AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
           default: Parameters for the new account to be created
@@ -30,117 +31,121 @@ Metadata:
           - SourceBucket
           - BaselineTemplate
           - AccountBilling
-
 Parameters:
   MasterLambdaArn:
-    Description: "Enter the ARN for the lambda function in your root account for creating accounts (OUTPUTS from Infrastructure Setup CloudFormation)"
+    Description: Enter the ARN for the lambda function in your root account for creating
+      accounts (OUTPUTS from Infrastructure Setup CloudFormation)
     Type: String
-
   AccountEmail:
-   Description: "Email address of the AWS account to be created"
-   Type: String
-   AllowedPattern: ".+"
-   ConstraintDescription: "Must provide a valid email address"
-
+    Description: Email address of the AWS account to be created
+    Type: String
+    AllowedPattern: .+
+    ConstraintDescription: Must provide a valid email address
   AccountName:
-    Description: "Name of the new AWS Account Name"
+    Description: Name of the new AWS Account Name
     Type: String
-    AllowedPattern: ".+"
-    ConstraintDescription: "Provide the account name"
-
+    AllowedPattern: .+
+    ConstraintDescription: Provide the account name
   OrganizationalUnitName:
-    Description: "Name of the organizational unit (OU) to which the account should be moved to."
+    Description: Name of the organizational unit (OU) to which the account should
+      be moved to.
     Type: String
-    Default: "None"
-    AllowedPattern: ".+"
-
+    Default: None
+    AllowedPattern: .+
   StackRegion:
-    Description: "Region for deploying the baseline template in the vended account"
-    Default: "us-east-1"
+    Description: Region for deploying the baseline template in the vended account
+    Default: us-east-1
     Type: String
-    AllowedPattern: ".+"
-    AllowedValues: ["us-east-2","us-east-1","us-west-1","us-west-2","ap-northeast-1","ap-northeast-2","ap-northeast-3","ap-south-1","ap-southeast-1","ap-southeast-2","ca-central-1","cn-north-1","cn-northwest-1","eu-central-1","eu-west-1","eu-west-2","eu-west-3","sa-east-1"]
-    ConstraintDescription: "Must be a valid AWS region"
-
+    AllowedPattern: .+
+    AllowedValues:
+      - us-east-2
+      - us-east-1
+      - us-west-1
+      - us-west-2
+      - ap-northeast-1
+      - ap-northeast-2
+      - ap-northeast-3
+      - ap-south-1
+      - ap-southeast-1
+      - ap-southeast-2
+      - ca-central-1
+      - cn-north-1
+      - cn-northwest-1
+      - eu-central-1
+      - eu-west-1
+      - eu-west-2
+      - eu-west-3
+      - sa-east-1
+    ConstraintDescription: Must be a valid AWS region
   SourceBucket:
-    Description: "Name of the S3 bucket holding the baseline template file"
+    Description: Name of the S3 bucket holding the baseline template file
     Type: String
-    Default: "config-<Account-id>"
-
+    Default: config-<Account-id>
   BaselineTemplate:
-    Description: "Baseline template to be deployed in the vended account."
+    Description: Baseline template to be deployed in the vended account.
     Type: String
-    Default: "Accountbaseline.yml"
-
+    Default: Accountbaseline.yml
   AccountBilling:
-    Description: "Account Billing Type"
+    Description: Account Billing Type
     Type: String
-    Default: "Invoicing"
-
+    Default: Invoicing
   SkipCloudCheckr:
-    Description: "Non false to skip cloud checker functionality"
-    AllowedValues: [true, false]
+    Description: Non false to skip cloud checker functionality
+    AllowedValues:
+      - true
+      - false
     Type: String
     Default: false
-
   CloudCheckrApiSecret:
-    Description: "ARN of the secret where API key for accessing Cloud Checker is stored"
+    Description: ARN of the secret where API key for accessing Cloud Checker is stored
     Type: String
-    Default: "CloudCheckrApiKeySecret"
-
+    Default: CloudCheckrApiKeySecret
   CloudTrailBucket:
-    Description: "Cloud Checker Cloud Trail Bucket"
+    Description: Cloud Checker Cloud Trail Bucket
     Type: String
-    Default: "cloudtrailbucket-<Account-id>"
-
+    Default: cloudtrailbucket-<Account-id>
   CurBucket:
-    Description: "Name of the S3 bucket holding the baseline template file"
+    Description: Name of the S3 bucket holding the baseline template file
     Type: String
-    Default: "curbucket-<Account-id>"
-
+    Default: curbucket-<Account-id>
   DbrBucket:
-    Description: "Name of the S3 bucket holding the baseline template file"
+    Description: Name of the S3 bucket holding the baseline template file
     Type: String
-    Default: "dbrbucket-<Account-id>"
-
+    Default: dbrbucket-<Account-id>
   ConfigBucket:
-    Description: "Name of the S3 bucket holding the config and trail logs from all accounts in the Organization"
+    Description: Name of the S3 bucket holding the config and trail logs from all
+      accounts in the Organization
     Type: String
-    Default: "configbucket-<Account-id>"
-
+    Default: configbucket-<Account-id>
 Resources:
-
   TriggerAccountLambda:
-    Type: "Custom::TriggerAccountLambda"
+    Type: Custom::TriggerAccountLambda
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
-      ServiceToken: !Ref MasterLambdaArn
-      AccountEmail : !Ref AccountEmail
-      AccountName : !Ref AccountName
+      ServiceToken: !Ref 'MasterLambdaArn'
+      AccountEmail: !Ref 'AccountEmail'
+      AccountName: !Ref 'AccountName'
       OrganizationalUnitName: !Ref 'OrganizationalUnitName'
-      StackName : 'avm-baseline-stack'
-      StackRegion : !Ref StackRegion
-      SourceBucket : !Ref SourceBucket
-      BaselineTemplate: !Ref BaselineTemplate
-      AccountBilling: !Ref AccountBilling
-      CloudCheckrApiSecret: !Ref CloudCheckrApiSecret
-      CCStackName: 'avm-cloudchecker-stack'
-      CloudTrailBucket: !Ref CloudTrailBucket
-      CurBucket: !Ref CurBucket
-      DbrBucket: !Ref DbrBucket
-      SkipCloudCheckr: !Ref SkipCloudCheckr
-      ConfigBucket : !Ref ConfigBucket
-
+      StackName: avm-baseline-stack
+      StackRegion: !Ref 'StackRegion'
+      SourceBucket: !Ref 'SourceBucket'
+      BaselineTemplate: !Ref 'BaselineTemplate'
+      AccountBilling: !Ref 'AccountBilling'
+      CloudCheckrApiSecret: !Ref 'CloudCheckrApiSecret'
+      CCStackName: avm-cloudchecker-stack
+      CloudTrailBucket: !Ref 'CloudTrailBucket'
+      CurBucket: !Ref 'CurBucket'
+      DbrBucket: !Ref 'DbrBucket'
+      SkipCloudCheckr: !Ref 'SkipCloudCheckr'
+      ConfigBucket: !Ref 'ConfigBucket'
 Outputs:
   Message:
     Description: Execution Status
     Value: !GetAtt 'TriggerAccountLambda.Message'
-
   AccountID:
     Description: AWS Account ID of the newly vended account
     Value: !GetAtt 'TriggerAccountLambda.AccountID'
-
   LoginURL:
     Description: Login URL for the newly vended account
     Value: !GetAtt 'TriggerAccountLambda.LoginURL'
