--- a/AccountCreationLambdaSetup-cfn.yaml
+++ b/AccountCreationLambdaSetup-cfn.yaml
@@ -75,7 +75,7 @@ Resources:
             - sts:AssumeRole
       Path: /
       ManagedPolicyArns:
-        - arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
       Policies:
         - PolicyName: LambdaPolicy
           PolicyDocument:
@@ -86,7 +86,7 @@ Resources:
                 Action:
                   - sts:AssumeRole
                 Resource:
-                  - arn:${AWS::Partition}:iam::*:role/OrganizationAccountAccessRole
+                  - !Sub arn:${AWS::Partition}:iam::*:role/OrganizationAccountAccessRole
               - Sid: S3Operations
                 Effect: Allow
                 Action:
