--- a/AccountCreationLambdaSetup-cfn.yaml
+++ b/AccountCreationLambdaSetup-cfn.yaml
@@ -145,7 +145,7 @@ Resources:
   AccountBuilderLambdaLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub /aws/lambda/AccountBuilderLambda
+      LogGroupName: /aws/lambda/AccountBuilderLambda
       RetentionInDays: 7
   AccountVendingPortfolio:
     Type: AWS::ServiceCatalog::Portfolio
