--- a/AccountCreationLambdaSetup-cfn.yaml
+++ b/AccountCreationLambdaSetup-cfn.yaml
@@ -49,7 +49,6 @@ Parameters:
     Default: Automation-reference-architecture
 Resources:
   AccountBuilderLambda:
-    DependsOn: AccountBuilderLambdaLogGroup
     Type: AWS::Lambda::Function
     Properties:
       Handler: AccountCreationLambda.main
@@ -145,7 +144,7 @@ Resources:
   AccountBuilderLambdaLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: /aws/lambda/AccountBuilderLambda
+      LogGroupName: /aws/lambda/${AccountBuilderLambda}
       RetentionInDays: 7
   AccountVendingPortfolio:
     Type: AWS::ServiceCatalog::Portfolio
