--- a/AccountCreationLambdaSetup-cfn.yaml
+++ b/AccountCreationLambdaSetup-cfn.yaml
@@ -144,7 +144,7 @@ Resources:
   AccountBuilderLambdaLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: /aws/lambda/${AccountBuilderLambda}
+      LogGroupName: !Sub /aws/lambda/${AccountBuilderLambda}
       RetentionInDays: 7
   AccountVendingPortfolio:
     Type: AWS::ServiceCatalog::Portfolio
